# otcdocstheme

./: .gitignore  .travis.yml  .zuul.yaml  CONTRIBUTING.rst  README.md  README.rst  RELEASENOTES.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: conf.py
doc/: requirements.txt
doc/blueprints/source/: conf.py
doc/source/: conf.py  index.rst
doc/source/_templates/: longtable.tex.jinja  longtable.text.jinja  tabular.tex copy.jinja  tabular.tex.jinja
doc/source/_templates/_templates/: longtable.tex.jinja
doc/source/examples/: code_examples.rst  directives.rst  index.rst  installing_a_grid_driver_on_a_gpu-accelerated_ecs.rst
otcdocstheme/: ext.py  full_width_table.py  paths.py
otcdocstheme/theme/otcdocs/: accordion.html  css.html  footer.html  header.html  layout.html  localtoc.html  page_options.html  script_footer.html  sidebartoc.html  sidebartoc_menu.html  sidebartoc_menu_apiref.html  swiftype_search.html  swiftype_search_mobile.html  theme.conf  titlerow.html
otcdocstheme/theme/otcdocs/_pygments/: style.py
otcdocstheme/theme/otcdocs/static/: navigation.yaml
otcdocstheme/theme/otcdocs/static/css/: combined.css  otcdocstheme.css
otcdocstheme/theme/otcdocs/static/js/: docs.js  navigation_yaml.js  otc_helpers.js  search.js  search.jsx  search_2.js
otcdocstheme/theme/otcdocs/static/scale-components/: .npmignore  p-0001cf8a.entry.js  p-00937005.entry.js  p-00ec731f.entry.js  p-0131a7ce.entry.js  p-0305ab27.entry.js  (+434 more)
otcdocstheme/theme/otcdocs_pdf/: pdftheme.sty
releasenotes/notes/: add-project-links-ff3e9377417a5c10.yaml  bootstrap5-e6f706cff2ea671a.yaml  change-root-link-5e6eb70fb869ac12.yaml  drop-google-01017fb959b908a7.yaml  fix-api-ref-df2269c9ad560c6b.yaml  fix-bug-tracker-260f8de5be2a849e.yaml  fix-sphinx4-ee98168de2714190.yaml  fix-table-09c4e5eaf38be8c0.yaml  links-eceff7bb45d56fec.yaml  new-theme-4c62220ee9492289.yaml  sync-with-openstack-87c6854f3bc4f180.yaml  various_updates-8f7ae9e3c2d58d2d.yaml
releasenotes/source/: conf.py  index.rst
(+187 files in other folders)
