[metadata]
name = otcdocstheme
summary = OpenTelekomCloud Docs Theme
description-file =
    README.rst
author = OpenTelekomCloud
author-email = artem.goncharov@gmail.com
home-page = https://cloud.otc.com
classifier =
    Environment :: OpenTelekomCloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    otcdocstheme

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1

[pbr]
warnerrors = True
