[metadata]
name = otcdocstheme
summary = OpenTelekomCloud Docs Theme
description_file =
    README.rst
author = Artem Goncharov
author_email = artem.goncharov@gmail.com
home_page = https://cloud.otc.com
python_requires = >= 3.6
classifier =
    Environment :: OpenStack
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Documentation

[files]
packages =
    otcdocstheme
scripts =
    bin/docstheme-build-pdf

[options.entry_points]
pygments.styles =
    Otc = otcdocstheme._pygments.style:OtcStyle
sphinx.html_themes =
    otcdocstheme = otcdocstheme
